# gpu_nn_framework

./: CMakeLists.txt  README.md
src/: main.cpp
src/autograd/: autograd.cpp  autograd.h
src/cuda/: matmul.cu  relu.cu
src/layers/: linear.cpp  linear.h
src/tensor/: tensor.cpp  tensor.h
